--- a/starter-mint-ui/package.json
+++ b/starter-mint-ui/package.json
@@ -5,6 +5,7 @@
   "author": "Devin Chen <d3vin.chen@gmail.com>",
   "private": true,
   "dependencies": {
+    "mint-ui": "^2.2.9",
     "nuxt": "latest"
   },
   "scripts": {
